<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>planning</name>
  <version>0.0.0</version>
  <description>Planning package</description>
  <maintainer email="henri.hegedus@gmail.com">Henrich Hegedus</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>eufs_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>python3-numpy</depend>
  <depend>python3-scipy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
